Image on mobile design OK

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,13 +16,12 @@ $dv-blue: hsl(240, 5%, 91%);
     src: url(../fonts/KumbhSans-Regular.ttf);
 }
 
-
 body {
-    font-family: Kumbh Sans, sans-serif ;
+    font-family: Kumbh Sans, sans-serif;
     font-size: 12px;
     font-weight: 400;
     box-sizing: border-box;
-    margin: 40% 5% 10% 5%;
+    margin: -20% 5% 5% 5%;
     background-image: linear-gradient($bg-violet, $bg-blue);
 }
 
@@ -30,12 +29,8 @@ main {
     background-color: white;
     border-radius: 20px;
     box-shadow: 10px 30px 70px rgba(0, 0, 0, 0.4);
-}
-
-.images {
-    margin-left: 5%;
-    height: 130px;
-
+    box-sizing: border-box;
+    padding: 35% 0 10% 0;
 }
 
 .desktop-img {
@@ -43,36 +38,46 @@ main {
 }
 
 .mobile-img {
-    overflow: visible;
+    width: 90%;
+    padding-right: 10%;
+    padding-bottom: 25px;
     position: relative;
-    bottom: 110px;
-    width: 85%;
-}
-
-.bg-mobile {
-    position: relative;
-    bottom: 200px;
-    width: 75%;
-    left: 9%;
+    top: 130px;
+    background-image: url(../images/bg-pattern-mobile.svg);
+    background-repeat: no-repeat;
+    background-size: 81%;
+    background-position-x: center;
+    background-position-y: 90%;
 }
 
 h1 {
-    color: blue;
+    font-size: 2.2rem;
     text-align: center;
+    padding-top: 20px;
 }
 
+ul {
+    list-style: none;
+    padding: 0 30px;
+}
 
+li {
+    border-bottom: solid $dv-blue 1px;
+}
 
+h3 {
+    color: $ntx-v-dark-blue;
+}
 
-
-
-
+p {
+    color: $ntx-dark-blue;
+}
 
 .attribution {
-    font-size: 11px; 
+    font-size: 11px;
     text-align: center;
     margin-top: 20px;
-
-
 }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
