--- a/css/styles.css
+++ b/css/styles.css
@@ -38,25 +38,48 @@ main {
 
 h1 {
   font-size: 2.2rem;
+  font-weight: 700;
   text-align: center;
   padding-top: 20px;
+  margin-bottom: 0;
 }
 
-ul {
-  list-style: none;
-  padding: 0 30px;
+.list {
+  padding: 20px;
 }
 
-li {
+.q-a {
   border-bottom: solid #e7e7e9 1px;
 }
 
-h3 {
+.question {
+  padding: 15px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.question img {
+  width: 10px;
+  height: 7px;
+  position: relative;
+  right: 0;
+}
+
+input {
+  opacity: 0;
+  position: absolute;
+}
+
+label {
   color: #4a4b5e;
+  font-size: 0.8rem;
 }
 
 p {
   color: #787887;
+  margin: 0;
+  padding: 0 0 15px 0;
+  display: none;
 }
 
 .attribution {
