--- a/css/styles.scss
+++ b/css/styles.scss
@@ -52,25 +52,49 @@ main {
 
 h1 {
     font-size: 2.2rem;
+    font-weight: 700;
     text-align: center;
     padding-top: 20px;
+    margin-bottom: 0;
 }
 
-ul {
-    list-style: none;
-    padding: 0 30px;
+.list {
+    padding: 20px;
 }
 
-li {
+.q-a {
     border-bottom: solid $dv-blue 1px;
 }
 
-h3 {
+.question {
+    padding: 15px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    img {
+        width: 10px;
+        height: 7px;
+        position: relative;
+        right: 0;
+    }
+}
+
+input {
+    opacity: 0;
+    position: absolute;
+}
+
+label {
     color: $ntx-v-dark-blue;
+    font-size: .8rem;
 }
 
 p {
     color: $ntx-dark-blue;
+    margin: 0;
+    padding: 0 0 15px 0;
+    display: none;
 }
 
 .attribution {
