--- a/css/styles.css
+++ b/css/styles.css
@@ -45,11 +45,22 @@ h1 {
 }
 
 .list {
-  padding: 20px;
+  padding: 20px 20px 0 20px;
 }
 
 .q-a {
   border-bottom: solid #e7e7e9 1px;
+}
+
+input {
+  opacity: 0;
+  position: absolute;
+}
+
+label {
+  color: #4a4b5e;
+  font-size: 0.8rem;
+  cursor: pointer;
 }
 
 .question {
@@ -63,23 +74,16 @@ h1 {
   height: 7px;
   position: relative;
   right: 0;
-}
-
-input {
-  opacity: 0;
-  position: absolute;
-}
-
-label {
-  color: #4a4b5e;
-  font-size: 0.8rem;
+  transition: all 0.5s;
 }
 
 p {
   color: #787887;
   margin: 0;
-  padding: 0 0 15px 0;
-  display: none;
+  padding: 0;
+  max-height: 0;
+  transition: all 0.5s;
+  overflow: hidden;
 }
 
 .attribution {
@@ -89,7 +93,21 @@ p {
 }
 
 .attribution a {
-  color: #3e52a3;
+  color: #f47c57;
+}
+
+input:checked + label {
+  color: black;
+  font-weight: bold;
+}
+input:checked + label img {
+  transform: rotate(180deg);
+  transition: all 0.5s;
+}
+input:checked ~ p {
+  max-height: 100vh;
+  transition: all 0.5s;
+  padding-bottom: 15px;
 }
 
 /*# sourceMappingURL=styles.css.map */
