--- a/css/styles.scss
+++ b/css/styles.scss
@@ -36,7 +36,7 @@ main {
     padding: 35% 0 10% 0;
 }
 
-.desktop-img {
+.desktop-img, .desktop-box {
     display: none;
 }
 
@@ -141,28 +141,42 @@ input:checked {
         height: 100vh;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
+        align-items: center;
     }
 
     .content {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
+        height: 80vh;
     }
 
     .mobile-img {
         display: none;
     }
 
-    .desktop-img {
-        display: block;
+    .desktop-imgs {
         position: relative;
+        top: 150px;
+    
+        .desktop-img {
+            display: block;
+            // left: 400px;
+            // top: 400px;
+            width: 25%;
+        }
+
+        .desktop-box {
+            display: block;
+            position: relative;
+            bottom: 50px;
+            width: 100px;
+        }
     }
 
-
     main {
-        padding: 0;
-        width: 60%;
+        padding: 0 0 0 200px;
+        position: relative;
+        bottom: 250px;
+        z-index: -1;
     }
     
     
